--- a/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_panel.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/show_admin_panel.html.twig
@@ -4,27 +4,40 @@
 
 {% block body %}
 
-        <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#carousel">Slider</a></li>
-            <li><a data-toggle="tab" href="#course">Kursy</a></li>
-            <li><a data-toggle="tab" href="#movie">Filmy</a></li>
-        </ul>
+    <ul class="nav nav-tabs">
+        <li class="active"><a data-toggle="tab" href="#carousel">Slider</a></li>
+        <li><a data-toggle="tab" href="#course">Kursy</a></li>
+        <li><a data-toggle="tab" href="#movie">Filmy</a></li>
+        <li><a data-toggle="tab" href="#user">Użytkownicy</a></li>
+        <li><a data-toggle="tab" href="#basket">Koszyki</a></li>
 
-        <div class="table tab-content" style="margin-top:10px">
-            <div id="carousel" class="tab-pane fade in active" style="margin-top: 10px;">
-                {{ render(controller(
+    </ul>
+
+    <div class="table tab-content" style="margin-top:10px">
+        <div id="carousel" class="tab-pane fade in active" style="margin-top: 10px;">
+            {{ render(controller(
                 'AppBundle:Admin:showAdminCarousel'
                 )) }}
-            </div>
-            <div id="course" class="tab-pane fade">
-                {{ render(controller(
+        </div>
+        <div id="course" class="tab-pane fade">
+            {{ render(controller(
                 'AppBundle:Admin:showAdminCourse'
                 )) }}
-            </div>
-            <div id="movie" class="tab-pane fade">
-                {{ render(controller(
+        </div>
+        <div id="movie" class="tab-pane fade">
+            {{ render(controller(
                 'AppBundle:Admin:showAdminMovie'
                 )) }}
-            </div>
         </div>
+        <div id="user" class="tab-pane fade">
+            {{ render(controller(
+                'AppBundle:Admin:showAdminUser'
+                )) }}
+        </div>
+        <div id="basket" class="tab-pane fade">
+            {{ render(controller(
+                'AppBundle:Admin:showAdminBasket'
+                )) }}
+        </div>
+    </div>
 {% endblock %}
