--- a/fit4kids/src/AppBundle/Resources/views/Admin/basic_form.html.twig
+++ b/fit4kids/src/AppBundle/Resources/views/Admin/basic_form.html.twig
@@ -1,9 +1,19 @@
-
+{% extends 'base.html.twig' %}
 
 {% block title %}{% endblock %}
 
 {% block body %}
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    {{ form_end(form) }}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-6">
+                {{ form_start(form) }}
+                {{ form_widget(form) }}
+                {{ form_end(form) }}
+            </div>
+            <div class="col-md-3">
+            </div>
+        </div>
+    </div>
 {% endblock %}
