--- a/fit4kids/app/Resources/views/movie/course_movies.html.twig
+++ b/fit4kids/app/Resources/views/movie/course_movies.html.twig
@@ -1,6 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {% if app.session.flashBag.has('success') %}
+        <div class="alert alert-success">
+            {% for msg in app.session.flashBag.get('success') %}
+                {{ msg }}
+            {% endfor %}
+        </div>
+    {% endif %} 
+    {% if app.session.flashBag.has('danger') %}
+        <div class="alert alert-danger">
+            {% for msg in app.session.flashBag.get('danger') %}
+                {{ msg }}
+            {% endfor %}
+        </div>
+    {% endif %}
     <h1>Kurs: {{courseTitle}}</h1>
     {% for movie in movies %}
     <hr>
@@ -28,6 +42,11 @@
                         {% endif %}
                     {% endfor %} 
                     ({{movie.ratingCount}} ocen)
+                    <form action="{{ path('addRating') }}" method="POST">
+                        <input type="number" name="value" min="0" max="5"></input>
+                        <INPUT type="HIDDEN" NAME="movieId" VALUE={{movie.id}}>
+                        <input type="submit" value="oceń film"</input>
+                    </form>
                 </td>
             </tr>
         
