--- a/fit4kids/app/Resources/views/basket/show.html.twig
+++ b/fit4kids/app/Resources/views/basket/show.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
     {%if empty == 1%}
-            <div class="alert alert-info">
+            <div class="alert alert-info" style="margin-bottom: 35px;">
                 Koszyk Jest Pusty
             </div>
     {%endif%}
